@@ -178,54 +178,54 @@
       </Docs>
     </Member>
     <Member MemberName="BytesTotal">
-      <MemberSignature Language="C#" Value="public long BytesTotal { set; get; };" />
-      <MemberType>Property</MemberType>
+      <MemberSignature Language="C#" Value="public long BytesTotal;" />
+      <MemberType>Field</MemberType>
       <ReturnValue>
         <ReturnType>System.Int64</ReturnType>
       </ReturnValue>
-      <Parameters />
+      <Parameters>
+      </Parameters>
       <Docs>
         <summary>To be added</summary>
-        <returns>a <see cref="T:System.Int64" /></returns>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
     <Member MemberName="FileSize">
-      <MemberSignature Language="C#" Value="public long FileSize { set; get; };" />
-      <MemberType>Property</MemberType>
+      <MemberSignature Language="C#" Value="public long FileSize;" />
+      <MemberType>Field</MemberType>
       <ReturnValue>
         <ReturnType>System.Int64</ReturnType>
       </ReturnValue>
-      <Parameters />
+      <Parameters>
+      </Parameters>
       <Docs>
         <summary>To be added</summary>
-        <returns>a <see cref="T:System.Int64" /></returns>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
     <Member MemberName="BytesCopied">
-      <MemberSignature Language="C#" Value="public long BytesCopied { set; get; };" />
-      <MemberType>Property</MemberType>
+      <MemberSignature Language="C#" Value="public long BytesCopied;" />
+      <MemberType>Field</MemberType>
       <ReturnValue>
         <ReturnType>System.Int64</ReturnType>
       </ReturnValue>
-      <Parameters />
+      <Parameters>
+      </Parameters>
       <Docs>
         <summary>To be added</summary>
-        <returns>a <see cref="T:System.Int64" /></returns>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
     <Member MemberName="TotalBytesCopied">
-      <MemberSignature Language="C#" Value="public long TotalBytesCopied { set; get; };" />
-      <MemberType>Property</MemberType>
+      <MemberSignature Language="C#" Value="public long TotalBytesCopied;" />
+      <MemberType>Field</MemberType>
       <ReturnValue>
         <ReturnType>System.Int64</ReturnType>
       </ReturnValue>
-      <Parameters />
+      <Parameters>
+      </Parameters>
       <Docs>
         <summary>To be added</summary>
-        <returns>a <see cref="T:System.Int64" /></returns>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
