@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <api>
-  <symbol type="alias" cname="GnomeVFSFileSize" name="long"/>
+  <symbol type="alias" cname="GnomeVFSFileSize" name="long long"/>
 </api>
 
