@@ -1,3 +1,8 @@
+2005-01-06  Mike Kestner  <mkestner@novell.com>
+
+	* gnomevfs/gnomevfs-symbols.xml : FileSize is a long long.
+	* generator/SymbolTable.cs : map longlong to C# long.
+
 2005-01-05  Mike Kestner  <mkestner@novell.com>
 
 	* gtk/gtk-api.raw : regen.
